# filetools

./: .devcontainer.json  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
scripts/: manage.sh
src/: __main__.py
src/filemeta/: __init__.py
src/filetools/: __init__.py  cleaner.py  cli.py  reporter.py  scanner.py  utils.py
src/filetools/formats/: jsonline.py  sqlite.py
tests/: test_formats_jsonline.py  test_formats_sqlite.py  test_utils.py
tests/resources/: test_file.1
