[metadata]
name = filetools
description = file tools 
url = https://github.com/ownport/filetools
author = ownport
author_email=ownport@gmail.com
license = MIT License
license_file = LICENSE
classifiers = 
    # Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    # License :: OSI Approved :: MIT License
    # Operating System :: Unix
keywords = 
    python3
    file
    tools
    duplicates

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >=3.8
zip_safe = True

[options.packages.find]
where = src
